objects/amc__Project__c.object
<CustomObject>
    <fields>
        <fullName>Account_Owner_Email__c</fullName>
        <inlineHelpText>Identifies the Email Address of the Account Owner for the Account this Project relates to</inlineHelpText>
        <label>Account Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>MC Projects</relationshipLabel>
        <relationshipName>MC_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Copado_CSM__c</fullName>
        <formula>amc__Account__r.Customer_Success_Manager__r.FirstName + &quot; &quot; +  amc__Account__r.Customer_Success_Manager__r.LastName</formula>
        <label>Copado CSM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Success_Manager_Email__c</fullName>
        <inlineHelpText>Identifies the Email Address of the Customer Success Manager for the Account this Project relates to</inlineHelpText>
        <label>Customer Success Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmailAccountName__c</fullName>
        <description>Field used in Email Template</description>
        <formula>amc__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EmailAccountName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailContactName__c</fullName>
        <description>Field used in email templates only</description>
        <formula>amc__Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EmailContactName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>End Date of the project based on internal activities independent of Milestone End Dates or customer go-live date.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date__c</fullName>
        <label>Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Partner that is managing this Project</inlineHelpText>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MC Projects (Partner)</relationshipLabel>
        <relationshipName>MC_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Kick_off_Date__c</fullName>
        <inlineHelpText>Identifies the ideal Project Kick-off Date based on the Opportunity Close Date + 7 Days</inlineHelpText>
        <label>Project Kick-off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Owner_Email__c</fullName>
        <description>Related to this user story: US-0024142</description>
        <label>Project Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Guide me</fullName>
                </value>
                <value>
                    <fullName>Do it for me</fullName>
                </value>
                <value>
                    <fullName>Service Investment</fullName>
                </value>
                <value>
                    <fullName>Template</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scoped_Hours__c</fullName>
        <inlineHelpText>The total number of scoped hours as per signed SOW regardless of discounts or planned goodwill. Entered manually during project setup.</inlineHelpText>
        <label>Scoped Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_CSH_Milestone_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set to true when a Milestone with a Milestone Type of &apos;Customer Success Handover&apos; is set to Complete. Used by a Workflow Rule to notify key staff</inlineHelpText>
        <label>Send CSH Milestone Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Start Date of the project based on internal activities independent of milestone start dates or official kick off.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Actual_Performance__c</fullName>
        <formula>If(  amc__Cost_Budget__c   = 0, &quot;No Measurement&quot;, if(((   amc__Cost_Actual__c  +   amc__Expense_Summary__c +  amc__Actual_Project_Expenses__c  ) / amc__Cost_Budget__c)&lt;0.8,
&quot;Under Project Budget&quot;, 
if((( amc__Cost_Actual__c  +   amc__Expense_Summary__c +  amc__Actual_Project_Expenses__c  ) / amc__Cost_Budget__c) &lt;=1,
&quot;Within Project Budget&quot;,
&quot;Over Project Budget&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows performance based on Completed Hours + Material Costs + Actual Project Expenses</inlineHelpText>
        <label>Actual Performance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Actual_Project_Expenses_Billable__c</fullName>
        <inlineHelpText>Identifies the value of all billable Expenses that are approved on this project</inlineHelpText>
        <label>Actual Project Expenses (Billable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Actual_Project_Expenses_Non_Billable__c</fullName>
        <inlineHelpText>Identifies the value of all non-billable Expenses that are approved on this project</inlineHelpText>
        <label>Actual Project Expenses (Non Billable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Actual_Project_Expenses__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Identifies the total expenses claimed on the Project (e.g. where Status = Approved)</inlineHelpText>
        <label>Actual Project Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Amount_Invoiced__c</fullName>
        <inlineHelpText>Identifies the Total Invoiced value based on the &apos;Amount&apos; field of all related Billing Events where Type = Invoice</inlineHelpText>
        <label>Amount Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Amount_Outstanding__c</fullName>
        <label>Amount Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Anticipated_Project_Expenses__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Identifies the anticipated expenses to be claimed on this Project</inlineHelpText>
        <label>Anticipated Project Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Removes the project from various Picklists and from the Whiteboard</inlineHelpText>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Baseline_End_Date__c</fullName>
        <label>Baseline End Date</label>
        <summarizedField>amc__Milestone__c.amc__Baseline_End_Date__c</summarizedField>
        <summaryForeignKey>amc__Milestone__c.amc__Project__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Baseline_Start_Date__c</fullName>
        <label>Baseline Start Date</label>
        <summarizedField>amc__Milestone__c.amc__Baseline_Start_Date__c</summarizedField>
        <summaryForeignKey>amc__Milestone__c.amc__Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Billable_Hourly_Rate__c</fullName>
        <formula>IF(ISPICKVAL( amc__Project_Day_Rate__c  , &quot;Standard&quot;), amc__Day_Rate__c /  IF(NOT(ISBLANK(amc__Hours_Per_Day__c)), amc__Hours_Per_Day__c, IF(NOT(ISBLANK($Setup.amc__Rates__c.amc__Hours_Per_Day__c)), $Setup.amc__Rates__c.amc__Hours_Per_Day__c, 8)), 0)</formula>
        <inlineHelpText>Identifies the Billable Hourly Rate for revenue calculations. Used to calculate project revenue if Billing Rate = Standard</inlineHelpText>
        <label>Billable Hourly Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Billing_Cycle__c</fullName>
        <inlineHelpText>Identifies the billing method for this project</inlineHelpText>
        <label>Billing Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Milestone</fullName>
                </value>
                <value>
                    <fullName>Periodic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Billing_Type__c</fullName>
        <inlineHelpText>Identifies billing type that this Project will use</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Price</fullName>
                </value>
                <value>
                    <fullName>Fixed Price + Expenses</fullName>
                </value>
                <value>
                    <fullName>Time &amp; Materials</fullName>
                </value>
                <value>
                    <fullName>$0 Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Category__c</fullName>
        <description>Identifies the category this project belongs to</description>
        <inlineHelpText>Identifies the category this project belongs to</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Forecast</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Advisory Services</fullName>
                </value>
                <value>
                    <fullName>Strategic Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Client_Overview_Page_URL__c</fullName>
        <formula>$Setup.amc__Rates__c.amc__Read_Only_Site__c &amp; &quot;?pid=&quot; &amp; amc__External_Project_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Field: Identifies the URL to provide customer read-only access</inlineHelpText>
        <label>Client Overview Page URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Colour_Hex__c</fullName>
        <inlineHelpText>Enter the 6 digit Hexadecimal reference that should be applied to this Project. This will take precedence over the &apos;Colour&apos; field</inlineHelpText>
        <label>Colour Hex</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Colour__c</fullName>
        <inlineHelpText>Green - The project is on track, and no significant risks or issues have been identified.
Yellow - There are Risks and Issues that may impact our ability to meet the expected timeline or fulfill other success criteria. 
Red - The project is not currently expected to meet the expected timeline and/or fulfill the success criteria. 
Grey - The project has formally been placed On Hold status.</inlineHelpText>
        <label>Colour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Grey</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Complete_Actions__c</fullName>
        <inlineHelpText>Roll Up Summary: Counts all Actions relating to this Project where the Action Status = Complete</inlineHelpText>
        <label>Complete Actions</label>
        <summarizedField>amc__Milestone__c.amc__Complete_Actions__c</summarizedField>
        <summaryForeignKey>amc__Milestone__c.amc__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Cost_Actual__c</fullName>
        <formula>if( ISPICKVAL(amc__Project_Day_Rate__c, &quot;Standard&quot;),  amc__Billable_Hourly_Rate__c   *  amc__Hours_Completed__c,  amc__Hours_Completed_Cost__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Provides a summary for the Hours Completed. (Previously Labelled Cost Actual)</inlineHelpText>
        <label>Billable Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Cost_Budget__c</fullName>
        <inlineHelpText>Set the total budget available for this Project. (Previously labelled Cost Budget)</inlineHelpText>
        <label>Project Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Cost_Day_Rate__c</fullName>
        <inlineHelpText>Identifies the day cost value for this project. Used to calculate project costs if Cost Rate = Standard</inlineHelpText>
        <label>Cost Day Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Cost_Forecast__c</fullName>
        <formula>if( ISPICKVAL(amc__Project_Day_Rate__c, &quot;Standard&quot;),  amc__Billable_Hourly_Rate__c  *  amc__Hours_Actual__c,  ( amc__Hours_Completed_Cost__c  +  amc__Hours_Remaining_Cost__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Provides a cost summary based on the Hours Completed + Hours Remaining. (Previously Labelled Cost Forecast)</inlineHelpText>
        <label>Billable Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Cost_Hourly_Rate__c</fullName>
        <formula>IF(ISPICKVAL(  amc__Cost_Rate__c , &quot;Standard&quot;),  amc__Cost_Day_Rate__c  /  IF(NOT(ISBLANK(amc__Hours_Per_Day__c)), amc__Hours_Per_Day__c, IF(NOT(ISBLANK($Setup.amc__Rates__c.amc__Hours_Per_Day__c)), $Setup.amc__Rates__c.amc__Hours_Per_Day__c, 8)) , 0)</formula>
        <inlineHelpText>Identifies the Hourly Cost for project this Project. Used to calculate project costs if Billing Rate = Standard</inlineHelpText>
        <label>Cost Hourly Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Cost_Rate__c</fullName>
        <inlineHelpText>Identifies whether the cost of hours accrued on this project will be based on the standard ‘Day Cost’ specified on the Project, or the ‘Hourly Cost’ of the individual Action Owners Role record</inlineHelpText>
        <label>Cost Rate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Role-based</fullName>
                </value>
                <value>
                    <fullName>Skill-based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Cost_Schedule__c</fullName>
        <formula>if( ISPICKVAL(amc__Project_Day_Rate__c, &quot;Standard&quot;),  amc__Billable_Hourly_Rate__c  * amc__Hours_Scheduled__c,  amc__Hours_Scheduled_Cost__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Provides a summary for the Hours Scheduled - Billable. (Previously Labelled Cost Schedule)</inlineHelpText>
        <label>Billable Schedule</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Current_CPI__c</fullName>
        <description>Identifies the most recent CPI value for this Project</description>
        <inlineHelpText>Identifies the most recent CPI value for this Project</inlineHelpText>
        <label>Current CPI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Current_SPI__c</fullName>
        <description>Identifies the most recent SPI value for this Project</description>
        <inlineHelpText>Identifies the most recent SPI value for this Project</inlineHelpText>
        <label>Current SPI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Date_Format__c</fullName>
        <description>Used primarily as a reference in apex code. does not need to be on page layout.</description>
        <formula>amc__Tax_Label__r.amc__Date_Format__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Format</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Day_Rate__c</fullName>
        <inlineHelpText>Set the &apos;Standard&apos; Billable Day Rate for this Project. (Previously Labelled Day Rate)</inlineHelpText>
        <label>Billable Day Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amc__Display_Change_Requests_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Tab should be available on the Project Overview Page</inlineHelpText>
        <label>Display Change Requests Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Display_Gantt_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Tab should be available on the Client Overview Page</inlineHelpText>
        <label>Display Gantt Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Display_Issues_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Tab should be available on the Client Overview Page</inlineHelpText>
        <label>Display Issues Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Display_Kanban_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Tab should be available on the Client Overview Page</inlineHelpText>
        <label>Display Kanban Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Display_Overview_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Tab should be available on the Client Overview Page</inlineHelpText>
        <label>Display Overview Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Display_Risks_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Tab should be available on the Client Overview Page</inlineHelpText>
        <label>Display Risks Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Display_Time_Logs_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Tab should be available on the Client Overview Page</inlineHelpText>
        <label>Display Time Logs Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Display_on_PMO_Dashboard__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies whether this Project will be displayed on the PMO Dashboard</inlineHelpText>
        <label>Display on PMO Dashboard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__End_Date__c</fullName>
        <inlineHelpText>Latest Milestone End Date of all Milestones related to this Project.</inlineHelpText>
        <label>End Date</label>
        <summarizedField>amc__Milestone__c.amc__End_Date__c</summarizedField>
        <summaryForeignKey>amc__Milestone__c.amc__Project__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Enforce_Dependency_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Dependency Trigger logic will only execute if this field is set to TRUE.</inlineHelpText>
        <label>Enforce Dependency Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Billable_Capacity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if the Actions related to this Project should be excluded from Billable Capacity</inlineHelpText>
        <label>Exclude from Billable Capacity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Daily_Digest__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies whether this Project should be excluded from the Daily Digest Email</inlineHelpText>
        <label>Exclude from Daily Digest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Program_Planner__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this Project will not be visible on the Program Planner.</inlineHelpText>
        <label>Exclude from Program Planner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Scheduler__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Project&apos;s Actions should be excluded from the Scheduler</inlineHelpText>
        <label>Exclude from Scheduler</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Timesheet__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prevents Child Actions from appearing on the Timesheet.</inlineHelpText>
        <label>Exclude from Timesheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Utilisation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if Actions relating to this Project should be excluded from the Role Utilisation Report</inlineHelpText>
        <label>Exclude from Utilisation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Whiteboard__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if Actions relating to this Project should be excluded from the Whiteboard.</inlineHelpText>
        <label>Exclude from Whiteboard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Expense_Summary__c</fullName>
        <label>Material Costs Completed</label>
        <summarizedField>amc__Milestone__c.amc__Expense_Summary__c</summarizedField>
        <summaryForeignKey>amc__Milestone__c.amc__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Expenses_Invoiced__c</fullName>
        <inlineHelpText>Identifies the total value of Expenses included in Billing Event Items on this Project</inlineHelpText>
        <label>Expenses Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Expenses_Mark_Up__c</fullName>
        <inlineHelpText>Identifies the markup % applied to Expenses on this Project</inlineHelpText>
        <label>Expenses Mark Up %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>amc__External_Project_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <inlineHelpText>Identifies the unique code for the Project that is used by the Client Overview Page URL field</inlineHelpText>
        <label>External Project Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>amc__Force_Financials_Recalculation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When set to TRUE forces a recalculation of the $ figures across all Actions &amp; Time Logs. This is to provide clients with the ability to adjust rates on the project and do a mass recalculation.</description>
        <inlineHelpText>When set to TRUE forces a recalculation of the $ figures across all Actions &amp; Time Logs. This is to provide clients with the ability to adjust rates on the project and do a mass recalculation.</inlineHelpText>
        <label>Force Financials Recalculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Forecast_Performance__c</fullName>
        <formula>If(  amc__Cost_Budget__c   = 0, &quot;No Measurement&quot;, if(((  amc__Cost_Forecast__c  +  amc__Material_Costs_Forecast__c + IF( amc__Actual_Project_Expenses__c &gt;  amc__Anticipated_Project_Expenses__c ,  amc__Actual_Project_Expenses__c ,  amc__Anticipated_Project_Expenses__c ) ) / amc__Cost_Budget__c)&lt;0.8,
&quot;Under Project Budget&quot;, 
if((( amc__Cost_Forecast__c  +  amc__Material_Costs_Forecast__c + IF( amc__Actual_Project_Expenses__c &gt;  amc__Anticipated_Project_Expenses__c ,  amc__Actual_Project_Expenses__c ,  amc__Anticipated_Project_Expenses__c ) ) / amc__Cost_Budget__c)&lt;=1,
&quot;Within Project Budget&quot;,
&quot;Over Project Budget&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows performance based on Forecast Hours &amp; Material Costs + whichever is greater out of Anticipated Project Expenses and Actual Project Expenses</inlineHelpText>
        <label>Forecast Performance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Gantt_Chart_Unit__c</fullName>
        <inlineHelpText>The Gantt Chart will render using the unit selected here.</inlineHelpText>
        <label>Gantt Chart Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                    <default>true</default>
                    <label>Day</label>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Gantt_Collapsed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, indicates the Project is collapsed on the Gantt.</description>
        <label>Gantt Collapsed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Generate_Weekly_Project_Status_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if a weekly Project Status Report PDF is generated for this Project</inlineHelpText>
        <label>Generate Weekly Project Status Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Actual__c</fullName>
        <formula>amc__Hours_Completed__c +  amc__Hours_Remaining__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Field: Sum total of &apos;Hours Completed - Billable&apos; and &apos;Hours Remaining - Billable&apos;. (Previously Labelled Hours Forecast)</inlineHelpText>
        <label>Hours Forecast - Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Allocated__c</fullName>
        <formula>IF( OR(ISBLANK(amc__Day_Rate__c) , amc__Day_Rate__c = 0) , 0, IF(ISPICKVAL( amc__Project_Day_Rate__c , &quot;Standard&quot;), ((IF(ISBLANK(amc__Cost_Budget__c), 0, amc__Cost_Budget__c) - ( amc__Material_Costs_Scheduled__c + IF(ISBLANK(amc__Anticipated_Project_Expenses__c), 0, amc__Anticipated_Project_Expenses__c) ))/ IF(ISBLANK(amc__Day_Rate__c), 0, amc__Day_Rate__c))* IF(NOT(ISBLANK(amc__Hours_Per_Day__c)), amc__Hours_Per_Day__c, IF(NOT(ISBLANK($Setup.amc__Rates__c.amc__Hours_Per_Day__c)), $Setup.amc__Rates__c.amc__Hours_Per_Day__c, 8)), 0))</formula>
        <inlineHelpText>Hours Allocated determines how many hours are available witin the allocated Budget - Anticipated Project Expenses. This formula only applies if the Project Day Rate = Standard (Otherwise, defaults to zero).</inlineHelpText>
        <label>Hours Allocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Completed_Cost__c</fullName>
        <inlineHelpText>Summarises the Hours Completed Cost field for all related Milestones. (Previously labelled Hours Completed Cost)</inlineHelpText>
        <label>Hours Completed Value (Billable)</label>
        <summarizedField>amc__Milestone__c.amc__Hours_Completed_Cost__c</summarizedField>
        <summaryForeignKey>amc__Milestone__c.amc__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Completed_Non_Billable__c</fullName>
        <inlineHelpText>Identifies the number of non billable hours completed for this Project</inlineHelpText>
        <label>Hours Completed - Non Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Completed_Value_Cost__c</fullName>
        <inlineHelpText>Summarises the Hours Completed Value of the Project Costs based on the Total Hours Completed</inlineHelpText>
        <label>Hours Completed Value (Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Completed__c</fullName>
        <inlineHelpText>Identifies the number of billable hours completed for this Project. (Previously Labelled Hours Completed)</inlineHelpText>
        <label>Hours Completed - Billable</label>
        <summarizedField>amc__Milestone__c.amc__Hours_Completed__c</summarizedField>
        <summaryForeignKey>amc__Milestone__c.amc__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Forecast_Non_Billable__c</fullName>
        <formula>amc__Hours_Completed_Non_Billable__c + amc__Hours_Remaining_Non_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Field: Sum total of ‘Hours Completed – Non Billable’ + ‘Hours Remaining – Non Billable’</inlineHelpText>
        <label>Hours Forecast - Non Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Per_Day__c</fullName>
        <defaultValue>IF(NOT(ISBLANK($Setup.amc__Rates__c.amc__Hours_Per_Day__c)),  $Setup.amc__Rates__c.amc__Hours_Per_Day__c, 8)</defaultValue>
        <inlineHelpText>Identifies how many hours a standard Day is made up of for this Project. Default Value = 8</inlineHelpText>
        <label>Hours Per Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>